# Laboratorio_No4_GC

./: CMakeLists.txt  README.md  run.sh
src/: color.h  fragment.h  framebuffer.h  line.h  loadOBJ.h  main.cpp  shaders.h  uniform.h  vertex.h
